--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: "Rowdies", cursiva;
+  
 }
 body {
   background: hsl(217, 54%, 11%);
@@ -11,6 +11,7 @@ body {
   align-items: center;
   min-height: 100vh;
   font-size: 18px;
+  font-family: 'Outfit', cursive;
   
 }
 .targeta {
@@ -52,9 +53,11 @@ body {
 
 .nombre-nft {
   color: hsl(0, 0%, 100%);
-  margin-bottom: 20px;
-  font-size: 20px;
-  cursor: pointer;
+    margin-bottom: 20px;
+    font-size: 18px;
+    cursor: pointer;
+    font-family: 'Outfit', sans-serif;
+    font-weight: 600;
 }
 .nombre-nft:hover {
   color: hsl(178, 100%, 50%);
@@ -62,6 +65,7 @@ body {
 .descripcion-nft {
   color: hsl(215, 51%, 70%);
   margin: 22px 0px;
+  font-size: 15px;
   
 
 }
@@ -70,13 +74,15 @@ body {
   justify-content: space-between;
   border-bottom: solid 1px hsla(215, 52%, 70%, 0.219);
   font-size: 15px;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   margin-bottom: 10px;
 }
 .precio-nft {
   color: hsl(178, 100%, 50%);
   display: flex;
   align-items: center;
+  font-size: 13px;
+    font-weight: 600;
 }
 .pd img{
     margin-right: 7px;
