--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
   padding: 0px;
   box-sizing: border-box;
 }
-body {
+.nft {
   background: hsl(217, 54%, 11%);
   display: flex;
   justify-content: center;
@@ -104,9 +104,9 @@ body {
 .creadora span:hover {
   color: hsl(178, 100%, 50%);
 }
-/*
-.attribution{
-    display: flex;
 
+.attribution {
+  display: flex;
+  color: aliceblue;
+  background: #0d192b;
 }
-*/
